kubernetes-home-ops/kubernetes/apps/observability/headlamp/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.smadja.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
spec:
  hostnames:
    - headlamp.smadja.dev
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: headlamp
          namespace: observability
          port: 4466
